--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,14 @@
         android:name="firebase_crashlytics_collection_enabled"
         android:value="false" />
 
+    <!--<meta-data android:name="firebase_messaging_auto_init_enabled"-->
+        <!--android:value="false" />-->
+    <!--<meta-data android:name="firebase_analytics_collection_enabled"-->
+        <!--android:value="false" />-->
+
     <uses-permission android:name="android.permission.INTERNET" />
+
+
 
     <application
         android:allowBackup="true"
@@ -25,7 +32,15 @@
         </activity>
         <activity android:name=".AboutUsActivity" />
         <activity android:name=".ContactUsActivity" />
-        <activity android:name=".ShareMarketActivity"></activity>
+        <activity android:name=".ShareMarketActivity">
+
+        </activity>
+        <!--<service-->
+            <!--android:name=".MyFirebaseMessagingService">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.google.firebase.MESSAGING_EVENT"/>-->
+            <!--</intent-filter>-->
+        <!--</service>-->
     </application>
 
 </manifest>
