--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,11 @@
         android:value="false" />
 
     <!--<meta-data android:name="firebase_messaging_auto_init_enabled"-->
-        <!--android:value="false" />-->
+    <!--android:value="false" />-->
     <!--<meta-data android:name="firebase_analytics_collection_enabled"-->
-        <!--android:value="false" />-->
+    <!--android:value="false" />-->
 
     <uses-permission android:name="android.permission.INTERNET" />
-
 
 
     <application
@@ -22,25 +21,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".RegistrationActivity">
+        <activity android:name=".Activities.MainActivity" />
+        <activity android:name=".Activities.RegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AboutUsActivity" />
-        <activity android:name=".ContactUsActivity" />
-        <activity android:name=".ShareMarketActivity">
+        <activity android:name=".Activities.AboutUsActivity" />
+        <activity android:name=".Activities.ContactUsActivity" />
+        <activity android:name=".Activities.ShareMarketActivity">
 
         </activity>
-        <!--<service-->
-            <!--android:name=".MyFirebaseMessagingService">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.firebase.MESSAGING_EVENT"/>-->
-            <!--</intent-filter>-->
-        <!--</service>-->
+
+        <service android:name=".Services.MyFirebaseMsgService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
